Add EnvLoader; refactor API calls & parsing
Introduce EnvLoader for .env fallback and add .env.example and .gitignore. Refactor ClimatiqResponseAPI to use EnvLoader, update to Climatiq search+estimate endpoints, add data_version, activity search fallback, build JSON estimate requests, and add a regex extractor helper. Update WeatherResponseAPI to use EnvLoader and try-with-resources for HttpClient. Improve CountryStatistics parsing to populate fields individually (with emission fallback) and make CompareTo robust against missing or non-numeric stats. Also update README with macOS JavaFX build/run examples.